[package]
name = "Rust_HuggingFace"
version = "0.1.0"

[dependencies]
llm = { git = "https://github.com/rustformers/llm" , branch = "main" }
clap = "3.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tch = "0.15.0"


# To improve debugging 
[profile.dev.package.ggml-sys]
opt-level = 3
